eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cai-api-deployment
  labels:
    app: cai-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cai-api
  template:
    metadata:
      labels:
        app: cai-api
    spec:
      containers:
      - name: cai-ai-go
        image: 657407981560.dkr.ecr.us-east-2.amazonaws.com/cai@sha256:8fddbdd904731c7d813da0bf5fe311dd8e433bc10635663a39645e2e1e92a8f9
        ports:
        - containerPort: 4400
      - name: cai-ai-py
        image: 657407981560.dkr.ecr.us-east-2.amazonaws.com/cai:fc38dcf5df160d723ae16c8f908e7b35f4b65fad
        ports:
        - containerPort: 4041
