eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cai-api-service
spec:
  selector:
    app: cai-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4400
      name: go-http-service
  type: ClusterIP
