eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cai-go-service
spec:
  selector:
    app: cai-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4400
      name: go-http-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: cai-py-service
spec:
  selector:
    app: cai-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4041
      name: py-http-service
  type: ClusterIP
